--- a/src/Styles/ContentGrid.css
+++ b/src/Styles/ContentGrid.css
@@ -4,14 +4,15 @@
   padding: 0px 20px 25px 20px;
 }
 .content-header {
-  display: flex;
-  justify-content: space-around;
-
+  /* display: flex;
+  justify-content: space-around; */
+  width: 100%;
   text-align: center;
   margin-right: 100px;
   color: gray;
-  padding: 20px 0 20px;
+  padding: 20px 0 10px 40px;
 }
+
 h2 {
   padding-top: 20px;
 }
