--- a/src/Styles/Item.css
+++ b/src/Styles/Item.css
@@ -5,6 +5,10 @@
   padding: 10px 15px 10px 10px;
   align-items: center;
 }
+.content-item img {
+  width: 50px;
+  height: auto;
+}
 .txt-color {
   color: #ee8915;
 }
