--- a/src/Styles/Menu.module.css
+++ b/src/Styles/Menu.module.css
@@ -1,6 +1,5 @@
 .menu {
   display: flex;
-  background-color: antiquewhite;
   border-radius: 10px;
   width: 90vw;
   padding-left: 20px;
@@ -10,6 +9,8 @@
   align-items: center;
   position: relative;
   left: 42%;
+  padding-top: 13px;
+  
 }
 .txt-color {
   color: #ee8915;
