--- a/src/Styles/Menu.module.css
+++ b/src/Styles/Menu.module.css
@@ -1,16 +1,15 @@
 .menu {
   display: flex;
   border-radius: 10px;
-  width: 90vw;
-  padding-left: 20px;
+  padding: 20px;
+  margin-top: 30px;
 }
 .element {
   display: flex;
   align-items: center;
   position: relative;
-  left: 42%;
+  left: 40%;
   padding-top: 13px;
-  
 }
 .txt-color {
   color: #ee8915;
