--- a/src/Styles/ContentGrid.css
+++ b/src/Styles/ContentGrid.css
@@ -2,6 +2,7 @@
   background-color: antiquewhite;
   border-radius: 10px;
   padding: 0px 20px 25px 20px;
+  margin: 30px 0px;
 }
 .content-header {
   /* display: flex;
